--- a/AssistanceRequestApp.Bot/EchoBot.csproj
+++ b/AssistanceRequestApp.Bot/EchoBot.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>latest</LangVersion>    
+    <AspNetCoreModuleName>AspNetCoreModuleV3</AspNetCoreModuleName>
   </PropertyGroup>
 
   <ItemGroup>
