--- a/AssistanceRequestApp.Bot/appsettings.json
+++ b/AssistanceRequestApp.Bot/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  "MicrosoftAppId": "e4956875-8edb-4bb1-8089-9cd4a1ef26af",
-  "MicrosoftAppPassword": "$;gK_wI@{yY@OPGR#rnzq1_.]Y",
+  "MicrosoftAppId": "3057c900-9c8d-40f5-9833-b1c30c7d2d17",
+  "MicrosoftAppPassword": "usIkK9IYf+oS@GV1IK6VGgMa.e.3",
   "ScmType": "None",
   //"AzureDatabaseConnectionString": "Server=tcp:azurebotqna.database.windows.net,1433;Initial Catalog=AssistanceRequestApp;Persist Security Info=False;User ID=webuser;Password=New1234$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   "ConnectionStrings": {
