Updated the Microsoft Bot AppId and Pwd with new bot service values

--- a/AssistanceRequestApp.Bot/appsettings.json
+++ b/AssistanceRequestApp.Bot/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  "MicrosoftAppId": "3057c900-9c8d-40f5-9833-b1c30c7d2d17",
-  "MicrosoftAppPassword": "usIkK9IYf+oS@GV1IK6VGgMa.e.3",
+  "MicrosoftAppId": "02900d33-c5d3-4756-8339-5d063ea8e299",
+  "MicrosoftAppPassword": "D$lbHnp0E:QcS7!.SuPYDav@i",
   "ScmType": "None",
   //"AzureDatabaseConnectionString": "Server=tcp:azurebotqna.database.windows.net,1433;Initial Catalog=AssistanceRequestApp;Persist Security Info=False;User ID=webuser;Password=New1234$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   "ConnectionStrings": {
