updated qnamaker credentials in settings.json

--- a/AssistanceRequestApp.Bot/appsettings.json
+++ b/AssistanceRequestApp.Bot/appsettings.json
@@ -7,8 +7,8 @@
     //"connectionString": "Data Source=.;Initial Catalog=AssistanceRequestApp;Integrated Security=True"
     "connectionString": "Data Source=azurebotqna.database.windows.net;Initial Catalog=AssistanceRequestApp;User ID=webuser;Password=New1234$;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "QnAKnowledgebaseId": "4a7709f4-95d1-4c4a-8292-ec1cbcf51d43",
-  "QnAAuthKey": "c0b2d6f8-e410-4029-ad5c-903ed743d235",
-  "QnAEndpointHostName": "https://assistancerequestappqna.azurewebsites.net/qnamaker",
-  "QnAQueryUrl": "https://assistancerequestappqna.azurewebsites.net/qnamaker/knowledgebases/4a7709f4-95d1-4c4a-8292-ec1cbcf51d43/generateAnswer"
+  "QnAKnowledgebaseId": "e92fc742-023c-44c3-aeb7-49109c4b7f7b",
+  "QnAAuthKey": "c25e1fc6-0595-44a3-bd93-b8b3d87c0334",
+  "QnAEndpointHostName": "https://qnamakerrequestapp.azurewebsites.net/qnamaker",
+  "QnAQueryUrl": "https://qnamakerrequestapp.azurewebsites.net/qnamaker/knowledgebases/e92fc742-023c-44c3-aeb7-49109c4b7f7b/generateAnswer"
 }
